# datastar-hs

./: README.md  build-and-deploy.sh  build-static.sh  datastar-hs.cabal
.github/workflows/: test.yml
deploy/: datastar-activity-feed.service  datastar-heap-live-fibs.service  datastar-heap-live-map.service  datastar-heap-simple-list.service  datastar-hello-world-channel.service  datastar-hello-world.service  index.html
examples/: activity-feed.hs  heap-view.hs  heap-view.html  hello-world-channel.hs  hello-world-channel.html  hello-world.hs  hello-world.html
src/Hypermedia/: Datastar.hs
src/Hypermedia/Datastar/: ExecuteScript.hs  Logger.hs  PatchElements.hs  PatchSignals.hs  Types.hs  WAI.hs
test/: Main.hs
test/Hypermedia/Datastar/: PatchElementsSpec.hs
