cabal-version:   3.0
name:            datastar-hs
version:         0.1.0.0
synopsis:        Haskell bindings for Datastar
license:         MIT
license-file:    LICENSE
author:          Carlo Hamalainen
maintainer:      carlo@carlo-hamalainen.net
category:        Web, Hypermedia
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
  exposed-modules: 
    Hypermedia.Datastar
    Hypermedia.Datastar.ExecuteScript
    Hypermedia.Datastar.Logger
    Hypermedia.Datastar.PatchElements
    Hypermedia.Datastar.PatchSignals 
    Hypermedia.Datastar.Types
    Hypermedia.Datastar.WAI 
  hs-source-dirs:  src
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
  build-depends:
    , base >= 4.7
    , aeson
    , bytestring
    , http-types
    , text
    , wai

test-suite datastar-hs-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    Hypermedia.Datastar.PatchElementsSpec
  build-depends:
    , base
    , datastar-hs
    , hspec
    , text
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings